--- a/Ejercicio3/style.css
+++ b/Ejercicio3/style.css
@@ -1,7 +1,34 @@
 .formulario {
   width: 300px;
-  padding: 20px;
+  padding: 40px;
   border-radius: 20px;
   margin: 0 auto;
+  color: white;
   background: linear-gradient(#bd09b7, #6b4cf5);
+  box-shadow: 2px 2px 3px 1px grey;
+}
+
+.campo {
+  padding: 5px;
+  width: 100%;
+}
+
+#boton {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  float: right;
+}
+
+@media (min-width: 500px) and (max-width: 1000px) {
+  .formulario {
+    width: 300px;
+    padding: 40px;
+    border-radius: 20px;
+    margin: 0 auto;
+    color: white;
+    background: linear-gradient(#bd09b7, #6b4cf5);
+    box-shadow: 2px 2px 3px 1px grey;
+  }
 }
